update 'about' section

--- a/index.html
+++ b/index.html
@@ -61,11 +61,20 @@
                         <a href="mailto:graham.delafield@gmail.com" style="color: #3a426b;">graham.delafield@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        I am a developing researcher in the fields of proteomics, bioinformatics, and computer science. 
-                        Currently I am focused on analytical innovation and computational modeling to aid in the profiling and 
-                        characterization of the human glycoproteome, performing graduate research at the University of Wisconsin-Madison.
-                        Anticipating graduation in March, 2023, I am interested in gaining experience in industrial and governmental settings
-                        that allow me to exercise my technical expertise and strong communication and leadership skills.
+                        I am excited by opportunity. With 10-years of mass-spectrometry and proteomics research experience, a truth I've found to be
+                        evident is that, in this field, pragmatism, courage, and diligence are paramount. I take pride in the desire to take on new 
+                        challenges, understand and master new technologies, and to present clear objectives and milestones for success. 
+                    </p>
+                    <p class="lead mb-5">
+                        Between my undergraduate, graduate, and industrial training, my expertise has come to include novel liquid chromatography separations,
+                        bottom-up discovery proteomics, post-translational modification enrichment and interrogation, isobaric labeling (TMT) and label-free 
+                        quantitation, DIA and PRM assay design, and affinity selection. I also am a proficient functional and object oriented programmer with an
+                        interest in development and data analytics.
+                    </p>
+                    <p class="lead mb-5">
+                        As my current employer has a vested interest in rational design peptides as a therapeutic modality, I constructed, own, and am responsible for all
+                        mass spectrometry efforts related to this corporate push. I designed and implemented the affinity-selection platform that has so far screened >7,000,000
+                        peptide candidates against our chosen targets. I have also established an in vitro peptide stability platform to assess peptide weak points for development.
                     </p>
                     <div class="row" style="align-content: flex-start;">
                         <div class="social-icons">
