update skills, cv

--- a/index.html
+++ b/index.html
@@ -121,12 +121,16 @@
                                     interest with 4 yielding high affinity candidates.
                                 </li>
                                 <li class="exp-list-item">
-                                    Utilized TMT-based quantitative proteomics for high-throughput validation of target engagement in peptide-protein 
-                                    and library-protein interactions.
+                                    Implemented an automated pipeline for metabolic stability assays, data collection, and data extraction, providing
+                                    >$150,000 cost savings in peptide drug discovery and assessment.
                                 </li>
                                 <li class="exp-list-item">
-                                    Developed in vitro stability and preliminary PKDM assays to rapidly assess peptide bioavailability across plasma, 
-                                    gastrointestinal fluids, microsomes, and cell media.
+                                    Lead efforts to establish and scale internal drug permeability assays, providing a high-throughput platform that
+                                    enables drug redesign based on molecular properties.
+                                </li>
+                                <li class="exp-list-item">
+                                    Utilized targeted engagement assay technologies (SPP, PISA) and TMT quantitative proteomics to establish drug-protein and library-protein
+                                    interaction, as well as drug off-target toxicity.
                                 </li>
                                 <li class="exp-list-item">
                                     Employed quantitative proteomics and lectin-based glycopeptide enrichment for identification of protein targets
@@ -550,75 +554,100 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Proteomics Research</div>
+                    <div class="subheading mb-3">Proteomics and Mass Spectrometry</div>
                     <ul class="fa-ul mb-3">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             High-Throughput Mass Spectrometry
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Instrumentation: Thermo Elite, Q-Exactive Series | Agilent 6560 IM-QTOF | Bruker timsTOF Pro | Waters Synapt G2 
+                            <ul>
+                                <li>
+                                    Instrumentation: Thermo Elite, Q-Exactive Series | Agilent 6560 IM-QTOF | Bruker timsTOF Pro | Waters Synapt G2 
+                                </li>
+                                <li>
+                                    Assay design, operation, troubleshooting, and maintenance.
+                                </li>
+                            </ul>
                             </li>
-                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Multi-tier Protein Analysis
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Bottom-up | middle-down | top-down 
-                            </li>
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Protein & peptide identification
-                            </li>
+                            <ul>
+                                <li>
+                                    Bottom-up | middle-down | top-down 
+                                </li>
+                                <li>
+                                    Protein & peptide identification
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Post-Translational Modification Analysis
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Glycan & glycopeptide identification
-                            </li>
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Phosphopeptide identification and localization
-                            </li>
+                           <ul>
+                                <li>
+                                   Glycan & glycopeptide identification
+                                </li>
+                                <li>
+                                    Phosphopeptide identification and localization
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Quantitative Proteomics
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Isobaric labeling relative quantitation
-                            </li>
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Data-dependent & data-independent acquisition label free quantitation
-                            </li>
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Isotopic incorporation & spike-in absolute quantitation
-                            </li>
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Reaction monitoring relative quantitation 
-                            </li>
+                            <ul>
+                                <li>
+                                    Tandem Mass Tag (TMT) relative and absolute quantitation
+                                </li>
+                                <li>
+                                    Data-dependent & data-independent acquisition label free quantitation
+                                </li>
+                                <li>
+                                    Isobaric labeling relative and absolute quantitation
+                                </li>
+                                <li>
+                                    Isotopic incorporation & spike-in absolute quantitation
+                                </li>
+                                <li>
+                                    Reaction monitoring relative quantitation 
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             High Pressure Liquid Chromatography
-                            <li>
-                                <span class="fa-li-low"></span>
-                                Nano & Standard Flow | Reversed-phase | Porous graphitic carbon | Ion-Exchange | Size Exclusion
-                            </li>
+                            <ul>
+                                <li>
+                                    Nano & Standard Flow | Reversed-phase | Porous graphitic carbon | Ion-Exchange | Size Exclusion
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Capillary Electrophoresis
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span    class="fa-li"><i class="fas fa-check"></i></span>
                             Custom Bioinformatics and Programming
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3">ADME  and DMPK</div>
+                    <ul class="fa-ul mb-3">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Metabolic Stability Assays
+                            <ul>
+                                <li>
+                                    Plasma, Serum, Gastrointestinal Fluids, Liver Microsomes, Cell Lysate, Cell Media
+                                </li>
+                            </ul>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Metabolite Identification (MetID)
+                            <ul>
+                                <li>
+                                    Untargeted, data-dependent acquisition to monitor proteolytic cleavage, reduciton, and oxygenase modifications.
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
